fill ampty pages with placeholder text and images, fix minor layout bugs

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,6 +5,7 @@ h2 {
   font-family: "Della Respira", "Times New Roman", Georgia;
   font-size: 300%;
   color: rgb(210, 16, 52);
+  margin-bottom: 3vh;
 }
 
 h4 {
@@ -49,6 +50,7 @@ h4 {
 }
 .page:last-of-type {
   margin-bottom: 10vh;
+  height: 75vh;
 }
 .page:not(:first-of-type) {
   margin-top: 20vh;
@@ -61,10 +63,10 @@ h4 {
 .page {
   font-family: "Lato", "Times New Roman", Georgia;
   text-align: center;
-  height: 75vh;
+  /*height: 75vh;*/
   min-height: 550px;
   border-radius: 1%;
-  padding: 0vh 2vw;
+  padding: 0vh 2vw 2vh 2vw;
 }
 
 .page p, .page li, .page ul{
@@ -73,7 +75,7 @@ h4 {
 }
 .page p{
   font-size: 110%;
-  text-indent: 7vw;
+  text-indent: 5vw;
 }
 .page ul {
   font-size: 110%;
@@ -96,6 +98,12 @@ h4 {
   margin-right: 5vw;
   margin-top: 20px;
   text-align: right;
+}
+
+.page img {
+  float: left;
+  max-width: 50%;
+  margin-right: 15px;
 }
 
 .route_animation {
